[package]
name = "ekonomi_backend"
version = "0.1.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"

[dependencies]
diesel = { version = "*", features = ["sqlite"] }
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
clap = {version = "*", features = ["yaml"]}
chrono = "*"
fern = "*"
log = "*"