[package]
name = "ekonomi_backend"
version = "0.1.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"

[dependencies]
chrono = "*"
clap = {version = "*", features = ["yaml"]}
diesel = { version = "*", features = ["sqlite"] }
fern = "*"
log = "*"
rocket = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
